--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 			
 		</div>
 
-		<script src="./js/todo/model.js" type="module"></script>
-		<script src="./js/todo/view.js" type="module"></script>
-		<script src="./js/todo/controller.js" type="module"></script>
+		<script src="./model.js" type="module"></script>
+		<script src="./view.js" type="module"></script>
+		<script src="./controller.js" type="module"></script>
 
 	</body>
 </html>
